<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailPhotoActivity"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail_photo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/photographer_label_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/taken_by"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="serif-monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/photographer_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="serif-monospace"
            android:text="@string/photographer_name"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/photographer_label_detail_tv"
            app:layout_constraintStart_toEndOf="@+id/photographer_label_detail_tv"
            app:layout_constraintTop_toTopOf="@+id/photographer_label_detail_tv" />

        <TextView
            android:id="@+id/url_photographer_label_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/photographer_bio"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="serif-monospace"
            app:layout_constraintStart_toStartOf="@+id/photographer_label_detail_tv"
            app:layout_constraintTop_toBottomOf="@+id/photographer_label_detail_tv" />

        <TextView
            android:id="@+id/url_photographer_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="serif-monospace"
            android:text="@string/url"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold|italic"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/url_photographer_label_detail_tv"
            app:layout_constraintStart_toStartOf="@+id/url_photographer_label_detail_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>